// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatOrder mutation test should create an order with resolver function: Order content 1`] = `
Object {
  "archived": false,
  "createdAt": "MASKED DATE",
  "hasRated": true,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "name": Object {
                "de": "Room temperature",
                "en": "Room temperature",
                "hu": "Szobahőmérsékletű",
              },
              "price": -1.7999999999999998,
              "productComponentId": "test_product_component_id",
            },
          ],
          "name": Object {
            "de": null,
            "en": "Modifier comp set",
            "hu": "Módosító komponens set",
          },
          "productSetId": "test_product_component_set_id",
          "type": "modifier",
        },
      ],
      "laneId": "lane_01",
      "priceShown": Object {
        "currency": "HUF",
        "pricePerUnit": 300,
        "priceSum": 1500,
        "tax": 27,
        "taxSum": 318.9,
      },
      "productId": "PRODUCT ID",
      "productName": Object {
        "en": "Product name",
      },
      "productType": "drink",
      "quantity": 5,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "test-monad",
        },
      ],
      "sumPriceShown": Object {
        "currency": "HUF",
        "pricePerUnit": 298.2,
        "priceSum": 1491,
        "tax": 27,
        "taxSum": 316.98,
      },
      "variantId": "VARIANT ID",
      "variantName": Object {
        "en": "VARIANT NAME",
      },
    },
  ],
  "orderMode": "instant",
  "orderNum": "010101",
  "paymentMode": Object {
    "method": "cash",
    "type": "card",
  },
  "place": Object {
    "seat": "01",
    "table": "01",
  },
  "rating": Object {
    "key": "RATING KEY",
    "value": 3,
  },
  "serviceFee": Object {
    "currency": "HUF",
    "grossPrice": 200,
    "taxContent": 20,
  },
  "servingMode": "inPlace",
  "statusLog": Array [],
  "sumPriceShown": Object {
    "currency": "HUF",
    "pricePerUnit": 298.2,
    "priceSum": 2982,
    "tax": 27,
    "taxSum": 633.96,
  },
  "takeAway": false,
  "unitId": "test_unit_1_id",
  "updatedAt": "MASKED DATE",
  "userId": "test-monad",
}
`;

exports[`CreatOrder mutation test should create an order with resolver function: rkeeper deps called 1`] = `
Array [
  Array [
    Object {
      "axiosInstance": [Function],
      "currentTimeISOString": [Function],
    },
  ],
]
`;

exports[`CreatOrder mutation test should create an order with resolver function: rkeeper func called 1`] = `
Array [
  Array [
    Object {
      "address": Object {
        "address": "Ág u. 1.",
        "city": "Budapest",
        "country": "Magyarország",
        "location": Object {
          "lat": 47,
          "lng": 19,
        },
        "postalCode": "1021",
        "title": "HQ",
      },
      "chainId": "test_chain_1_id",
      "createdAt": "MASKED DATE",
      "description": Object {
        "de": null,
        "en": "Test unit #test_unit_1_id description",
        "hu": "Teszt unit #test_unit_1_id leírás",
      },
      "email": null,
      "externalId": "restaurantid",
      "floorMap": null,
      "groupId": "test_group_1_id",
      "id": "rkeeper-unit",
      "isAcceptingOrders": true,
      "isActive": true,
      "lanes": Array [
        Object {
          "color": "#e72222",
          "id": "lane_01",
          "name": "bár",
        },
        Object {
          "color": "#e123ef",
          "id": "lane_02",
          "name": "konyha",
        },
      ],
      "lastOrderNum": null,
      "merchantId": null,
      "name": "Késdobáló S",
      "open": Object {
        "from": "1970-01-01",
        "to": "2970-01-01",
      },
      "openingHours": null,
      "orderPaymentPolicy": "prepay",
      "orderPolicy": null,
      "packagingTaxPercentage": 27,
      "paymentModes": Array [
        Object {
          "caption": null,
          "method": "cash",
          "type": "cash",
        },
        Object {
          "caption": null,
          "method": "card",
          "type": "card",
        },
        Object {
          "caption": null,
          "method": "inapp",
          "type": "stripe",
        },
      ],
      "phone": null,
      "pos": Object {
        "rkeeper": Object {
          "anyuppPassword": "MASKED ANYUPP PASSWORD",
          "anyuppUsername": "ANYUPP_USERNAME",
          "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
          "rkeeperPassword": "b6302d53085c9486d0f765ec475f18",
          "rkeeperUsername": "795_50_155_539",
        },
        "type": "rkeeper",
      },
      "ratingPolicies": Array [
        Object {
          "description": Object {
            "de": null,
            "en": "Desc",
            "hu": null,
          },
          "key": "question1",
          "ratings": Array [
            Object {
              "icon": null,
              "text": Object {
                "de": null,
                "en": "good",
                "hu": null,
              },
              "value": 1,
            },
          ],
          "title": Object {
            "de": null,
            "en": "Question",
            "hu": null,
          },
        },
      ],
      "serviceFeePolicy": Object {
        "percentage": 10,
        "type": "applicable",
      },
      "soldOutVisibilityPolicy": null,
      "supportedOrderModes": Array [
        "pickup",
        "instant",
      ],
      "supportedServingModes": Array [
        "inPlace",
        "takeAway",
      ],
      "timeZone": null,
      "tipPolicy": Object {
        "description": null,
        "minOtherAmount": null,
        "percents": Array [
          2,
        ],
        "title": null,
      },
      "updatedAt": "MASKED DATE",
    },
    Object {
      "archived": false,
      "createdAt": "MASKED DATE",
      "hasRated": true,
      "id": "MASKED ID",
      "items": Array [
        Object {
          "configSets": Array [
            Object {
              "items": Array [
                Object {
                  "allergens": Array [
                    "egg",
                    "gluten",
                  ],
                  "name": Object {
                    "de": "Room temperature",
                    "en": "Room temperature",
                    "hu": "Szobahőmérsékletű",
                  },
                  "price": -1.7999999999999998,
                  "productComponentId": "test_product_component_id",
                },
              ],
              "name": Object {
                "de": null,
                "en": "Modifier comp set",
                "hu": "Módosító komponens set",
              },
              "productSetId": "test_product_component_set_id",
              "type": "modifier",
            },
          ],
          "laneId": "lane_01",
          "priceShown": Object {
            "currency": "HUF",
            "pricePerUnit": 300,
            "priceSum": 1500,
            "tax": 27,
            "taxSum": 318.9,
          },
          "productId": "PRODUCT ID",
          "productName": Object {
            "en": "Product name",
          },
          "productType": "drink",
          "quantity": 5,
          "statusLog": Array [
            Object {
              "status": "none",
              "ts": "MASKED TIMESTAMP",
              "userId": "test-monad",
            },
          ],
          "sumPriceShown": Object {
            "currency": "HUF",
            "pricePerUnit": 298.2,
            "priceSum": 1491,
            "tax": 27,
            "taxSum": 316.98,
          },
          "variantId": "VARIANT ID",
          "variantName": Object {
            "en": "VARIANT NAME",
          },
        },
      ],
      "orderMode": "instant",
      "orderNum": "010101",
      "paymentMode": Object {
        "method": "cash",
        "type": "card",
      },
      "place": Object {
        "seat": "01",
        "table": "01",
      },
      "rating": Object {
        "key": "RATING KEY",
        "value": 3,
      },
      "serviceFee": Object {
        "currency": "HUF",
        "grossPrice": 200,
        "taxContent": 20,
      },
      "servingMode": "inPlace",
      "statusLog": Array [],
      "sumPriceShown": Object {
        "currency": "HUF",
        "pricePerUnit": 298.2,
        "priceSum": 2982,
        "tax": 27,
        "taxSum": 633.96,
      },
      "takeAway": false,
      "unitId": "rkeeper-unit",
      "updatedAt": "MASKED DATE",
      "userId": "test-monad",
    },
  ],
]
`;

exports[`CreatOrder mutation test should create an order with resolver function: second order ordernum 1`] = `"010102"`;
